# boring-templates

./: README.md  boring.sh  initBoring.sh
cpp/: vcpkg.json  watch.sh
lib/: custom.sh  project.sh  update.sh  usage.sh
src/: .gitignore  dev.sh  main.cpp  vcpkg.json
templates/cpp/: .clang-format  README.md  dev.sh  main.cpp
templates/cpp/testCustom/: CMakeLists.txt
